fix .gitignore to new lang names

--- a/deu_frak/.gitignore
+++ b/deu_frak/.gitignore
@@ -1,16 +1,16 @@
 *.tr
-deu-frak.freq-dawg
-deu-frak.inttemp
-deu-frak.normproto
-deu-frak.number-dawg
-deu-frak.pffmtable
-deu-frak.punc-dawg
-deu-frak.unicharset
-deu-frak.word-dawg
+deu_frak.freq-dawg
+deu_frak.inttemp
+deu_frak.normproto
+deu_frak.number-dawg
+deu_frak.pffmtable
+deu_frak.punc-dawg
+deu_frak.unicharset
+deu_frak.word-dawg
 *.txt
 Microfeat
 unicharset
 *~
 shapetable
-deu-frak.shapetable
+deu_frak.shapetable
 unicharset.edited
