--- a/swe_frak/.gitignore
+++ b/swe_frak/.gitignore
@@ -1,16 +1,16 @@
 *.tr
-swe-frak.freq-dawg
-swe-frak.inttemp
-swe-frak.normproto
-swe-frak.number-dawg
-swe-frak.pffmtable
-swe-frak.punc-dawg
-swe-frak.unicharset
-swe-frak.word-dawg
+swe_frak.freq-dawg
+swe_frak.inttemp
+swe_frak.normproto
+swe_frak.number-dawg
+swe_frak.pffmtable
+swe_frak.punc-dawg
+swe_frak.unicharset
+swe_frak.word-dawg
 *.txt
 Microfeat
 unicharset
 *~
 shapetable
-swe-frak.shapetable
+swe_frak.shapetable
 unicharset.edited
