--- a/dan_frak/.gitignore
+++ b/dan_frak/.gitignore
@@ -1,16 +1,16 @@
 *.tr
-dan-frak.freq-dawg
-dan-frak.inttemp
-dan-frak.normproto
-dan-frak.number-dawg
-dan-frak.pffmtable
-dan-frak.punc-dawg
-dan-frak.unicharset
-dan-frak.word-dawg
+dan_frak.freq-dawg
+dan_frak.inttemp
+dan_frak.normproto
+dan_frak.number-dawg
+dan_frak.pffmtable
+dan_frak.punc-dawg
+dan_frak.unicharset
+dan_frak.word-dawg
 *.txt
 Microfeat
 unicharset
 *~
 shapetable
-dan-frak.shapetable
+dan_frak.shapetable
 unicharset.edited
